# charfind

./: .gitignore  Cargo.toml  MANIFEST  README.md  deploy.bat  deploy.sh  preprocessunidata.py  st.sh
data/: help.html  preprocessunidata.py
src/: application.rs  config.rs  fixed.rs  main.rs  main_window.rs  mainwindow.rs  options_form.rs  util.rs
src/application/: actions.rs
